﻿Version 2.0
- Process overhaul: load and apply RICO settings before game prefab initialisation by patching BuildingInfo.InitializePrefab(), instead of modifying post-initialisation
- Implement growables
- Overhaul building AIs, implementing separate (inheriting) AIs for growables and ploppables
- Remove error for zero workplaces for dummy service
- Remove redundant CalculateHomeCount Harmony patch
- Code cleanup and reengineering


Version 1.3

- Add override for building levels on game load (only applies to buildings in LocalRICOSettings.xml)
- Add building list 'filter by settings' function
- Suppress errors for buildings that are deactivated
- Tweak settings window layout and widen options panel
- Tweak options panel level menu update on service and subservice changes
- Logging tweaks


Version 1.2.5

- Building level errors in local settings for single-level building categories are now quietly logged


Version 1.2.4

- Configuration errors are now clearly divided into fatal and non-fatal categories
- Non-fatal errors for author settings are now quietly logged and do not generate an alert
- Improve building level error checking and correction
- Improve feedback on whether errors are in local or author settings
- Improve job level breakdowns where old-style workplace counts are used alongside unxepected subservice definitions
- Options panel now refreshes when settings are saved
- Correct rounding errors in options panel when calculating workplace breakdowns


Version 1.2.3

- Now intelligently guesses correct UI category when an invalid category has been provided
- Fix workplace allocation when old-format workplace totals are used (includes correction of rounding errors)
- Improved resiliance to invalid office and industrial subservices
- Building level corrections are now reported quietly in the log, not screaming in your face
- Ditto for XML files containing no valid buildings


Version 1.2.2
