@@ -2,9 +2,10 @@
 - Process overhaul: load and apply RICO settings before game prefab initialisation by patching BuildingInfo.InitializePrefab(), instead of modifying post-initialisation
 - Implement growables
 - Overhaul building AIs, implementing separate (inheriting) AIs for growables and ploppables
+- Allow 'none' as valid UI catgegory, and explicitly default to that if no valid UI category can be found or guessed
 - Remove error for zero workplaces for dummy service
 - Remove redundant CalculateHomeCount Harmony patch
-- Code cleanup and reengineering
+- Code cleanup
 
 
 Version 1.3
